--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "gulp": "^4.0.2",
+    "light-toast": "^0.3.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-spring": "^9.2.4",
     "semantic": "0.0.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
